--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,8 @@
 *.su
 
 # fyu
-
+.idea/
+.vscode
 *.DS_Store
 data/*
 !data/.empty_file
@@ -41,7 +42,7 @@ data/*
 dbgen
 qgen
 *.swp # vim swp file
-.idea/
 CMakeLists.txt
 cmake-build-debug/
 tags
+.tags
